# gudhi-devel

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeGUDHIVersion.txt  CMakeLists.txt  Conventions.txt  Dockerfile_for_circleci_image  Dockerfile_for_circleci_image_without_cgal  Dockerfile_for_pip  Dockerfile_gudhi_installation  Dockerfile_ubuntu  GUDHIVersion.cmake.in  LICENSE  README.md  To discuss.txt  appveyor.yml  azure-pipelines.yml  code_conventions.md  conanfile.txt  next_release.md  old_appveyor.yml  pyproject.toml
data/points/generator/: CMakeLists.txt  README  aurelien_alvarez_surfaces_in_R8.py  hypergenerator.cpp
src/: .clang-format  CMakeLists.txt  Doxyfile  Doxyfile.in  GUDHIConfig.cmake.in  GUDHIConfigVersion.cmake.in
src/Alpha_complex/benchmark/: Alpha_complex_3d_benchmark.cpp  CMakeLists.txt
src/Alpha_complex/concept/: SimplicialComplexForAlpha.h  SimplicialComplexForAlpha3d.h  Simplicial_complex_for_alpha.h
src/Alpha_complex/doc/: COPYRIGHT  Intro_alpha_complex.h  alpha_complex_doc.ipe  alpha_complex_doc_135.ipe  alpha_complex_doc_420.ipe  alpha_complex_doc_421.ipe  alpha_complex_doc_alpha_shape.ipe  alpha_complex_representation.ipe
src/Alpha_complex/example/: Alpha_complex_3d_from_points.cpp  Alpha_complex_from_off.cpp  Alpha_complex_from_points.cpp  CMakeLists.txt  Delaunay_triangulation_off_rw.cpp  Fast_alpha_complex_from_off.cpp  Simplex_tree_from_delaunay_triangulation.cpp  Weighted_alpha_complex_3d_from_points.cpp  Weighted_alpha_complex_from_points.cpp  alpha_complex_3d_step_by_step.cpp  alphaoffreader_for_doc.txt  alphaoffreader_for_doc_32.txt  alphaoffreader_for_doc_60.txt  traits_test.cpp  weightedalpha3dfrompoints_for_doc.txt
src/Alpha_complex/test/: Alpha_complex_3d_unit_test.cpp  Alpha_complex_dim3_Epeck_dynamic_unit_test.cpp  Alpha_complex_dim3_Epeck_static_unit_test.cpp  Alpha_complex_dim3_Epick_dynamic_unit_test.cpp  Alpha_complex_dim3_Epick_static_unit_test.cpp  Alpha_complex_dim3_unit_test.cpp  Alpha_complex_dim3_unit_test.h  Alpha_complex_unit_test.cpp  Alpha_kernel_d_Epeck_dynamic_unit_test.cpp  Alpha_kernel_d_Epeck_static_unit_test.cpp  Alpha_kernel_d_Epick_dynamic_unit_test.cpp  Alpha_kernel_d_Epick_static_unit_test.cpp  Alpha_kernel_d_unit_test.cpp  Alpha_kernel_d_unit_test.h  Alpha_shapes_unit_test.cpp  CMakeLists.txt  Delaunay_complex_Epeck_dynamic_unit_test.cpp  Delaunay_complex_Epeck_static_unit_test.cpp  Delaunay_complex_Epick_dynamic_unit_test.cpp  Delaunay_complex_Epick_static_unit_test.cpp  Delaunay_complex_unit_test.cpp  Delaunay_complex_unit_test.h  Incremental_delaunay_test.cpp  Periodic_alpha_complex_3d_unit_test.cpp  README  S4_100.off  S8_10.off  Weighted_alpha_complex_3d_unit_test.cpp  Weighted_alpha_complex_non_visible_points_unit_test.cpp  Weighted_alpha_complex_unit_test.cpp  Weighted_periodic_alpha_complex_3d_unit_test.cpp  Zero_weighted_alpha_complex_dynamic_unit_test.cpp  Zero_weighted_alpha_complex_static_unit_test.cpp  Zero_weighted_alpha_complex_unit_test.cpp  Zero_weighted_alpha_complex_unit_test.h  triangulation.cpp
src/Alpha_complex/utilities/: CMakeLists.txt  README  alpha_complex_3d_helper.h  alpha_complex_3d_persistence.cpp  alpha_complex_persistence.cpp  alphacomplex.md  exact_alpha_complex_3d_persistence.cpp  periodic_alpha_complex_3d_persistence.cpp  weighted_alpha_complex_3d_persistence.cpp  weighted_periodic_alpha_complex_3d_persistence.cpp
src/Alpha_shapes/example/: CMakeLists.txt  Delaunay_triangulation_off_rw.cpp  Simplex_tree_from_delaunay_triangulation.cpp
src/Alpha_shapes/test/: Alpha_shapes_unit_test.cpp  CMakeLists.txt  README  S4_100.off  S8_10.off
src/Bipartite_graph_matching/concept/: Persistence_diagram.h
src/Bipartite_graph_matching/example/: example.cpp
src/Bipartite_graph_matching/test/: CMakeLists.txt  bottleneck_unit_test.cpp
src/Bipartite_graphs_matching/example/: CMakeLists.txt  basic.cpp
src/Bipartite_graphs_matching/test/: CMakeLists.txt  bottleneck_unit_test.cpp
src/Bitmap_cubical_complex/benchmark/: CMakeLists.txt  bitmap_cubical_complex_benchmark.cpp
src/Bitmap_cubical_complex/doc/: COPYRIGHT  Gudhi_Cubical_Complex_doc.h
src/Bitmap_cubical_complex/example/: Bitmap_cubical_complex.cpp  Bitmap_cubical_complex_periodic_boundary_conditions.cpp  CMakeLists.txt  Compute_persistence_with_phat.cpp  Random_bitmap_cubical_complex.cpp  cc_wit_hiraoka.cpp  cc_wit_hiraoka_img.cpp  output_tikz.h
src/Bitmap_cubical_complex/test/: Bitmap_test.cpp  CMakeLists.txt
src/Bitmap_cubical_complex/utilities/: Bitmap_cubical_complex.cpp  Bitmap_cubical_complex_periodic_boundary_conditions.cpp  CMakeLists.txt  README  cubical_complex_persistence.cpp  cubicalcomplex.md  periodic_cubical_complex_persistence.cpp
src/Bottleneck/example/: CMakeLists.txt  random_diagrams.cpp
src/Bottleneck/test/: CMakeLists.txt  bottleneck_unit_test.cpp
src/Bottleneck_distance/benchmark/: CMakeLists.txt  bottleneck_chrono.cpp
src/Bottleneck_distance/concept/: Diagram_point.h  Persistence_diagram.h
src/Bottleneck_distance/doc/: COPYRIGHT  Intro_bottleneck_distance.h  bottleneck_distance_example.ipe
src/Bottleneck_distance/example/: CMakeLists.txt  README  alpha_rips_persistence_bottleneck_distance.cpp  bottleneck_basic_example.cpp  bottleneck_example.cpp  bottleneck_read_file_example.cpp
src/Bottleneck_distance/test/: CMakeLists.txt  README  bottleneck_chrono.cpp  bottleneck_unit_test.cpp
src/Bottleneck_distance/utilities/: CMakeLists.txt  README  alpha_rips_persistence_bottleneck_distance.cpp  bottleneck_distance.cpp  bottleneck_read_file_example.cpp  bottleneckdistance.md
src/GudhUI/: CMakeLists.txt  alpha_complex_persistence.cpp  todo.txt
src/cython/: CMakeLists.txt  Makefile  README  Simplex_tree_interface.h  cgudhi.pxd  clustering.py  cythonize_gudhi.py.in  gudhi.pyx  gudhi.pyx.in  main.py  setup.py  setup.py.in
src/debian/: changelog  control  copyright  docs  rules
src/python/: CMakeLists.txt  CONVENTIONS  introduction.md  introduction.rst  pyproject.toml  setup.py.in
src/sklearn_tda/: README.md  ex_diagrams.py  preprocessing.py  vector_methods.py
(+2558 files in other folders)
