[build-system]
requires = [
    "numpy>=1.21.6",
    "scikit-build-core >=0.4.3",
    "nanobind >=1.3.2",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"

cmake.args = [
    "-DWITH_GUDHI_TEST=OFF",
    "-DWITH_GUDHI_UTILITIES=OFF",
    "-DWITH_GUDHI_GUDHUI=OFF",
]
cmake.build-type = "Release"
build.verbose = true
logging.level = "INFO"
wheel.exclude = [
    "**/*.cc",
    "**/*.cmake",
    "**/*.in",
    "**/CMakeFiles",        # Then specific for Windows
    "**/*.dir",
    "**/Release",
    "**/*.vcxproj",
    "**/*.vcxproj.filters",
]
wheel.packages = []

[project]
name = "gudhi"
version = "3.13.0a0"
description = "The Gudhi library is an open source library for Computational Topology and Topological Data Analysis (TDA)."
readme = "src/python/doc/pypi_introduction.rst"
dependencies = ["numpy>=1.21.6"]
requires-python = ">=3.10"
authors = [{ name = "GUDHI Editorial Board <https://gudhi.inria.fr/contact/>" }]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

keywords = [
    "topological data analysis",
    "persistent homology",
    "persistence diagrams",
    "mapper",
    "simplicial complex",
    "manifold reconstruction",
    "machine learning",
    "classification",
    "deep-learning",
]

[dependency-groups]
build = [
    "numpy>=1.21.6",
    "scikit-build-core >=0.4.3",
    "nanobind >=1.3.2",
]
wheel = [
    "cmake",
    "build",
    "wheel",
    "delocate ; sys_platform == 'darwin'",
    "auditwheel ; sys_platform == 'linux'",
    "delvewheel ; platform_system == 'Windows'",
    {include-group = "build"},
]
common = [
    "matplotlib",
    "scipy>=1.6.0",
    "scikit-learn>=0.24.0",
    "POT",
    "tensorflow; python_version < '3.14'", # tensorflow is not available for python 3.14
]
test = [
    "pytest",
    "pytest-cov",
    "torch",
    "pykeops ; platform_system != 'Windows'",
    "hnswlib",
    "eagerpy",
    "networkx",
    {include-group = "common"},
]
doc = [
    "cmake",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx-paramlinks",
    "sphinx-autodoc-typehints",
    "pydata-sphinx-theme>=0.8.0",
    "pandas", # Required by scikit-learn >= 1.5.0 for fetch_openml used in doc
    {include-group = "common"},
]

[project.urls]
"Bug Tracker" = "https://github.com/GUDHI/gudhi-devel/issues"
"Documentation" = "https://gudhi.inria.fr/python/latest/"
"Source Code" = "https://github.com/GUDHI/gudhi-devel"
"License" = "https://gudhi.inria.fr/licensing/"

[tool.pytest.ini_options]
norecursedirs = "ext" # Do not look for tests in git submodules (hera would be found)
